# Bedrock-Tools

./: .gitignore  .gitmodules  CMakeLists.txt
assets/platform/windows/: resources.cmake  resources.rc
assets/texts/: languages.json
cmake/: assets.cmake  shaders.cmake
src-deps/imgui/: CMakeLists.txt
src-ui/: .gitignore  package.json  rsbuild.config.ts  tsconfig.json
src-ui/src/: App.css  App.tsx  Main.tsx
src-ui/src/components/: Header.tsx
src/common/: AppUI.cpp  AppUI.hpp  CMakeLists.txt  MainWindow.cpp  MainWindow.hpp
src/common/rendering/: DirectX11.cpp  DirectX11.hpp
src/common/util/: Logger.hpp
src/linux/: CMakeLists.txt  main.cpp
src/macos/assets/: resources.cmake
src/win/: CMakeLists.txt  main.cpp
src/win/assets/: resources.aps  resources.cmake  resources.rc  version.rc.in
tools/windows/: installer.nsi  portable.nsi
